--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ kramdown:
 # 作者信息
 author: 
   name: Ecsys
-  email: 18.yishi@gmail.com 
+  email: tbd@tbd.tbd
   link: http://ecsys.github.io
   github: http://github.com/ecsys
 
